--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body{
     background-color: lightblue;
     color: white;
     font-family:monospace;
-    font-weight: 600;    
+    font-weight: 600;  
+    font-size: 10px;  
 }
 
 #header,#footer{
@@ -16,13 +17,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 1rem;
 }
 
 #header{
     color:rgb(173, 174, 190);
     justify-content: flex-start;
     padding-left: 20px;
-    font-size: 2em;
+    font-size: 1.15rem;
 }
 
 #display{
@@ -30,11 +32,12 @@ body{
     border: 1px ridge rgb(113, 114, 124);
     border-bottom: 3px ridge rgb(113, 114, 124);
     border-radius: 10px;
-    width: 400px;
+    width: 300px;
     height: 100px;
     background-color: rgb(157, 158, 173);
     flex: 1 1 100%;
-    flex-wrap: wrap;   
+    flex-wrap: wrap;  
+    overflow: auto; 
 }
 
 #main{
@@ -49,62 +52,67 @@ body{
     background-color: rgb(5, 6, 65);
     border: 10px ridge rgb(113, 114, 124);
     border-radius: 10px;
-    width: 400px;
-    height: 505px;
+    width: 300px;
+    height: 405px;
     flex-wrap: wrap;
     margin: 30px;
     flex: 0 1 auto;
 }
 
 button{
-    height: 80px;
-    min-width: 100px;
+    height: 60px;
+    min-width: 60px;
     background-color: rgb(58, 64, 138);
     color: white;
     font-size: 25px;
     font-weight: bold;
     font-family: monospace;
-    border-radius: 7px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
 }
 
 button:active{
     background-color:rgb(81, 85, 146);
 }
 
-
-
 .contentrow{
     display: flex;
-    height: 80px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 19px;
 }
 
 a{
     text-decoration: none;
-    color: gray;
+    color: orange;
 }
 
 #displayInfo{
     display: flex;
-    height: 30px;
+    height: 20px;
     flex: 1 1 100%;
     font-size: 16px;
     font-weight: 100;
     align-items: center;
     padding-left :6px;
-
 }
 
 #displayResult{
+    position: relative;
+    bottom: 10px;
     margin: 0px;
     display: flex;
     justify-content: flex-end;
     align-items: end;
-    font-size: 64px;
+    font-size: 1.4rem;
     flex:1;
-    max-height: 70px;
+    max-height: 80px;
     padding-right: 4px;
 }
 
 #c,#equals,#neg,#backspace,.operand{
-    background-color: rgb(13, 14, 82);
-}
+    background-color: rgb(238, 161, 18);
+} 
